# tcr-sf-pb

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md
specifications/: 0.1.0_extract_annotations.md  0.2.0_unified_table.md  0.3.0_detection_table.md  0.3.1_detection_table_pairing.md  0.4.0_detection_curves.md  0.4.1_target_abundance_by_bin.md  0.4.2_expansion_concordance.md  0.4.3_threshold_sweep.md  0.4.4_rank_concordance.md  0.4.5_weighted_rank_concordance.md  0.4.6_correlation_regression.md  0.4.7_roc_auc_analysis.md  0.4.8_decile_information.md  0.5.0-project-workspace-foundation.md  0.5.2_pipeline_runne_execution_engine.md  0.5.5_results_browser.md
tests/: conftest.py  test_adapter_base.py  test_adapter_registry.py  test_bin_visualizations.py  test_build_clonotypes.py  test_build_detection_table.py  test_correlation_regression.py  test_csv_viewer.py  test_dataset.py  test_dataset_adapter_integration.py  test_dataset_validation.py  test_decile_information.py  test_desktop_imports.py  test_desktop_main_window.py  test_desktop_workspace_controller.py  test_detection_curves.py  test_expansion_concordance.py  test_extract_annotations.py  test_gallery.py  test_metadata.py  test_output_registry.py  test_pipeline_history.py  test_pipeline_registry.py  test_pipeline_runner.py  test_pipeline_validation.py  test_project.py  test_rank_concordance.py  test_results_browser.py  test_roc_auc_analysis.py  test_search.py  test_tenx_adapter.py  test_threshold_sweep.py  test_unified_schema.py  test_validation_gui_helpers.py  (+5 more)
(+103 files in other folders)
